# mcp-vibe-tools

./: .gitignore  .pypirc  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.py
.clinerules/: vibe-tools.md
.cursor/rules/: all.mdc  cursor-tools.mdc  good.mdc  repo.mdc  yo-mcp.mdc
.github/workflows/: release.yml
mcp-server-cursor-tools/: README.md  package.json  pnpm-lock.yaml  server.js  server.test.js  test-client.cjs
tests/: test_server.py
