[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-tools-mcp"
version = "1.1.0"
description = "MCP server for cursor-tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=0.1.0",
]

[project.scripts]
cursor-tools-mcp = "server:main"
